@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?define Version="1.1.1.494" ?>
+<?define Version="1.1.2.495" ?>
 <?define Manufacturer="Digimezzo" ?>
 <?define Product="Knowte" ?>
 <?define ProductCab="Knowte.cab" ?>
