@@ -2,11 +2,11 @@
 
 [assembly: AssemblyCompany("Digimezzo")]
 [assembly: AssemblyCopyright("Copyright Digimezzo © 2013 - 2017")]
-[assembly: AssemblyVersion("1.1.1.494")]
-[assembly: AssemblyFileVersion("1.1.1.494")]
+[assembly: AssemblyVersion("1.1.2.495")]
+[assembly: AssemblyFileVersion("1.1.2.495")]
 
 #if DEBUG
-[assembly: AssemblyInformationalVersion("1.1.1.494 Preview")]
+[assembly: AssemblyInformationalVersion("1.1.2.495 Preview")]
 #else
-[assembly: AssemblyInformationalVersion("1.1.1.494")]
+[assembly: AssemblyInformationalVersion("1.1.2.495")]
 #endif
