@@ -1,3 +1,9 @@
+2017-03-20: Knowte 1.1.2 Build 495 (Release)
+--------------------------------------------
+
+- [Fixed] Improved detection of old NoteStudio installations in the Migrator
+
+
 2017-03-20: Knowte 1.1.1 Build 494 (Release)
 --------------------------------------------
 
